--- a/com.sevenrmartsupermarket/pom.xml
+++ b/com.sevenrmartsupermarket/pom.xml
@@ -5,6 +5,26 @@
 	<groupId>com.sevenrmartsupermarket</groupId>
 	<artifactId>com.sevenrmartsupermarket</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<properties>
+		<maven.compiler.source>17</maven.compiler.source>
+		<maven.compiler.target>17</maven.compiler.target>
+	</properties>
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>3.3.1</version>
+					<configuration>
+						<suiteXmlFiles>
+							<file>src/main/resources/xmlsuites/parallel.xml</file>
+						</suiteXmlFiles>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
 
 	<dependencies>
 
